RESOLVED FIXED134271
WKContextHistoryClient::didNavigateWithNavigationData is passed incorrect URL when history.pushState is used
https://bugs.webkit.org/show_bug.cgi?id=134271
Summary WKContextHistoryClient::didNavigateWithNavigationData is passed incorrect URL...
Mark Rowe (bdash)
Reported 2014-06-24 14:56:41 PDT
When history.pushState is called, WKContextHistoryClient::didNavigateWithNavigationData is passed the URL of the current document rather than the URL of the document after the pushState. This isn't correct. <rdar://problem/16270167>
Attachments
Patch (8.77 KB, patch)
2014-06-24 15:08 PDT, Mark Rowe (bdash)
beidson: review+
Mark Rowe (bdash)
Comment 1 2014-06-24 15:08:01 PDT
Mark Rowe (bdash)
Comment 2 2014-06-24 16:36:04 PDT
Note You need to log in before you can comment on or make changes to this bug.