WKContextHistoryClient::didNavigateWithNavigationData is passed incorrect URL when history.pushState is used <https://webkit.org/b/134271> / <rdar://problem/16270167>

Reviewed by Brady Eidson.

Source/WebCore:
Tests: http/tests/globalhistory/history-delegate-pushstate.html
       http/tests/globalhistory/history-delegate-replacestate.html

* page/History.cpp:
(WebCore::History::stateObjectAdded): Call HistoryController after updating the document's URL so that the
URL will reflect the destination of the navigation when FrameLoaderClient::updateGlobalHistory is called.

LayoutTests:
* http/tests/globalhistory/history-delegate-pushstate-expected.txt: Added.
* http/tests/globalhistory/history-delegate-pushstate.html: Added.
* http/tests/globalhistory/history-delegate-replacestate-expected.txt: Added.
* http/tests/globalhistory/history-delegate-replacestate.html: Added.

Canonical link: https://commits.webkit.org/152254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170404 268f45cc-cd09-0410-ab3c-d52691b4dbfc